# content-optimizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  career.md.example  preferences.md.example  pyproject.toml
.claude/: settings.json
.claude/agents/: ats-insights.md  gap-analyzer.md  recruiter-scan.md
.claude/skills/assess/: SKILL.md
.claude/skills/create-artifact/: SKILL.md  resume-strategy.md
.claude/skills/research-opportunity/: SKILL.md
.claude/skills/vet/: SKILL.md
cli/: __init__.py  __main__.py  app.py  core.py  fetch.py
cli/schemas/: __init__.py  cover_letter.py  job_description.py  resume.py
templates/cover-letter/: primary.tex.j2
templates/cover-letter/original/: placeholder.tex
templates/resume/: primary.tex.j2
